[package]
name = "ngos"
version = "0.1.0"
authors = ["zhongjn <2389206378@qq.com>"]
edition = "2018"

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04"]
test-success-exit-code = 33

[package.metadata.bootloader]
kernel-stack-size = 8192

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bootloader = { version = "0.8.9", features = ["map_physical_memory"]}
spin = "0.5.2"
x86_64 = "0.10.3"
uart_16550 = "0.2.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"
heapless = "0.5.2"

[dependencies.num]
version = "0.2"
default-features = false

[dependencies.once_cell]
version = "1.3.0"
default-features = false

[dependencies.itertools]
version = "0.8.0"
default-features = false

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
